--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0"
   },
